plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.google.protobuf' version '0.9.4'
}

group = 'io.xrex'
version = '0.0.1-SNAPSHOT'
description = 'balance-service'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // gRPC dependencies
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation 'net.devh:grpc-server-spring-boot-starter:3.1.0.RELEASE'
    implementation 'io.grpc:grpc-netty-shaded:1.62.2'
    implementation 'io.grpc:grpc-protobuf:1.62.2'
    implementation 'io.grpc:grpc-stub:1.62.2'
    runtimeOnly 'io.grpc:grpc-services:1.62.2'

    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'

    // Disruptor
    implementation 'com.lmax:disruptor:4.0.0'

    // Caffeine Cache
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    // Persistence
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'com.mysql:mysql-connector-j'

    // Utilities
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    implementation 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'
    implementation 'org.apache.commons:commons-lang3'
    implementation 'com.alibaba.fastjson2:fastjson2:2.0.53'

    // Logging - for JSON encoder
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

    // Janino - for logback conditional processing
    implementation 'org.codehaus.janino:janino:3.1.12'

    // Ratis Core
    implementation 'org.apache.ratis:ratis-server:3.1.3'
    implementation 'org.apache.ratis:ratis-client:3.1.3'
    implementation 'org.apache.ratis:ratis-grpc:3.1.3'
    // Ratis Metrics
    implementation 'org.apache.ratis:ratis-metrics-api:3.1.3'
    implementation 'org.apache.ratis:ratis-metrics-default:3.1.3'
    // Third-party
    implementation 'org.apache.ratis:ratis-thirdparty-misc:1.0.10'

    // RocksDB
    implementation 'org.rocksdb:rocksdbjni:9.7.4'

    // Spring DevTools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:3.25.1"
    }
    plugins {
        grpc {
            artifact = "io.grpc:protoc-gen-grpc-java:1.62.2"
        }
    }
    generateProtoTasks {
        all().each {
            task ->
                task.builtins {
                    java {}
                }
                task.plugins {
                    grpc {}
                }
        }
    }
}

sourceSets {
    main {
        java {
            srcDirs 'build/generated/source/proto/main/grpc'
            srcDirs 'build/generated/source/proto/main/java'
        }
    }
}

tasks.named('bootBuildImage') {
    runImage = 'paketobuildpacks/ubuntu-noble-run-base:latest'
}

tasks.named('test') {
    useJUnitPlatform()
}
